--- a/NetMaxx/src/main/resources/application.properties
+++ b/NetMaxx/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=NetMaxx
+
+spring.datasource.url = jdbc:mysql://localhost:3306/NetMaxx
+spring.datasource.username = root
+spring.datasource.password = Tejas172304@
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
