--- a/NetMaxx/src/main/resources/application.properties
+++ b/NetMaxx/src/main/resources/application.properties
@@ -1,12 +1,18 @@
+
 spring.application.name=NetMaxx
-
-spring.datasource.url = jdbc:mysql://localhost:3306/NetMaxx
-spring.datasource.username = root
-spring.datasource.password = Tejas172304@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/NetMaxx?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=2596
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
+spring.jpa.properties.hibernate.format_sql=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+server.port=8080
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+spring.jackson.time-zone=Asia/Kolkata
